# bmpi

./: .gitignore  Makefile  README.md  go.work  run.py
auth/: .gitignore  auth.go  utils.go
auth/webserver/: auth.go  main.go
common/: BUILD  README.md  WORKSPACE  arm_toolchain_config.bzl
common/blink/: Cargo.toml
common/blink/src/: main.rs
common/lib/jado/: BUILD  BUILD.bazel  README.md  WORKSPACE  binding.cpp  data_struct.c  data_struct.h  jado.py  setup.py
common/lib/jado/jado-rs/: Cargo.toml
common/lib/jado/jado-rs/src/: lib.rs
common/lib/jado/src/: jado.cpp  jado.go  jado.h
common/tasks/hello_world/: BUILD
common/tasks/hello_world/src/: hello_word.c
common/tasks/video_rtp/: BUILD
common/tasks/video_rtp/src/: video_rtp.c
config/: basic.json  basic.yml
mlp/: README.md  api.py  cache.py  config.py
mlp/models/: resnet.py  simple.py
tools/: go.mod  list.go  main.go  setup.py
tools/bmpi/: deploy.py  main.py
tools/pkg/deploy/: deploy.go
tools/pkg/sim/: sim.go
viz/: package-lock.json  package.json
viz/src/: App.tsx
webserver/: .gitignore  auth.go  go.mod  go.sum  main.go  types.go
webserver/handlers/: auth.go  types.go  utils.go
