load("@pybind11//:build_defs.bzl", "pybind_extension")

cc_library(
    name = "data_struct_lib",
    srcs = [
        "data_struct.c",
        "data_struct.h",
    ],
    hdrs = [
        "data_struct.h",
    ],
    copts = ["-std=c++14"],
)

pybind_extension(
    name = "Jado",
    srcs = ["binding.cpp"],
    hdrs = ["data_struct.h"],
    deps = [
        ":data_struct_lib",
        "@pybind11//:pybind11",
    ],
    copts = ["-std=c++14"],
)
